Bugfix regarding text align on data grid

--- a/src/styles/component/data-container/data-grid/TDataGrid.scss
+++ b/src/styles/component/data-container/data-grid/TDataGrid.scss
@@ -111,6 +111,10 @@
             align-items: center;
             @include ellipsis;
             &::selection { color: transparent; background: transparent;}
+
+            &.ag-right-aligned-cell {
+                justify-content: flex-end;
+            }
         }
 
         .ag-overlay-no-rows-wrapper {
